# crosshair

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build_cmake.bat  build_fast.bat  build_mingw.bat  crosshair.cpp  crosshair.rc  logo.ico.backup  package.ps1  使用说明.md  启动程序.bat  打包部署.bat  测试准心.bat  部署说明.txt
images/: .gitkeep
